worked on event registration, fixed bugs realized from the frontend
